# crow

./: .babelrc  .gitignore  LICENSE  README.md  build.notes  crow.cabal  crow.hs  package.json  t.pl
app/: Main.hs
js-src/: crow.js
lib/Crow/: Cell.pm  Types.pm
lib/Crow/Cell/: Dark.pm  Light.pm
src/: Crow.hs
src/Crow/: Html.hs
static/: crow-bundle.js  crow.css  test.html
test/: Spec.hs
