name:                crow
version:             0.1.0.0
synopsis:            Crossword model
description:         Please see README.md
homepage:            http://github.com/osfameron/crow#readme
license:             BSD3
license-file:        LICENSE
author:              osfameron
maintainer:          osfameron@github.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Crow
  build-depends:       base >= 4.7 && < 5
                     , containers
  default-language:    Haskell2010

executable crow-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , crow
                     , bytestring
                     , MonadCatchIO-transformers
                     , mtl
                     , snap-core
                     , snap-server

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
  default-language:    Haskell2010

test-suite crow-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , crow
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/osfameron/crow
